// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrustModal matches snapshot in idle state 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#F7F7F7",
        "flex": 1,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            {
              "flexGrow": 1,
              "maxHeight": 333.5,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 20,
              "marginBottom": 27,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Image
              source=""
              style={
                {
                  "height": 93.38000000000001,
                  "marginBottom": 21.344,
                  "marginTop": 106.72,
                  "resizeMode": "contain",
                  "width": 93.38000000000001,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#111827",
                  "fontFamily": "Montserrat_700Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "marginBottom": 16.008,
                }
              }
            >
              title
            </Text>
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 76.038,
                  "marginHorizontal": 82.5,
                  "textAlign": "center",
                }
              }
            >
              subTitle
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#EDF6FB",
                "borderRadius": 20,
                "marginBottom": 16,
                "marginHorizontal": 18,
                "minHeight": 533.6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginHorizontal": 15,
                  },
                  {
                    "marginTop": 49.358,
                  },
                ]
              }
            >
              <Image
                source={
                  {
                    "uri": "https://example.com/logo.png",
                  }
                }
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 8,
                    "height": 40,
                    "marginRight": 12,
                    "resizeMode": "contain",
                    "width": 40,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#111827",
                    "flexShrink": 1,
                    "fontSize": 18,
                    "fontWeight": "600",
                  }
                }
              >
                Test Issuer
              </Text>
            </View>
            <Text
              style={
                {
                  "color": "#5D5D5D",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 41.354,
                  "marginHorizontal": 75,
                  "marginTop": 41.354,
                  "textAlign": "center",
                }
              }
            >
              description
            </Text>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 1
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 2
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 3
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 8,
            }
          }
        />
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</Modal>
`;

exports[`TrustModal matches snapshot in loading state 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#F7F7F7",
        "flex": 1,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            {
              "flexGrow": 1,
              "maxHeight": 333.5,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 20,
              "marginBottom": 27,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Image
              source=""
              style={
                {
                  "height": 93.38000000000001,
                  "marginBottom": 21.344,
                  "marginTop": 106.72,
                  "resizeMode": "contain",
                  "width": 93.38000000000001,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#111827",
                  "fontFamily": "Montserrat_700Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "marginBottom": 16.008,
                }
              }
            >
              title
            </Text>
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 76.038,
                  "marginHorizontal": 82.5,
                  "textAlign": "center",
                }
              }
            >
              subTitle
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#EDF6FB",
                "borderRadius": 20,
                "marginBottom": 16,
                "marginHorizontal": 18,
                "minHeight": 533.6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginHorizontal": 15,
                  },
                  {
                    "marginTop": 49.358,
                  },
                ]
              }
            >
              <Image
                source={
                  {
                    "uri": "https://example.com/logo.png",
                  }
                }
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 8,
                    "height": 40,
                    "marginRight": 12,
                    "resizeMode": "contain",
                    "width": 40,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#111827",
                    "flexShrink": 1,
                    "fontSize": 18,
                    "fontWeight": "600",
                  }
                }
              >
                Test Issuer
              </Text>
            </View>
            <Text
              style={
                {
                  "color": "#5D5D5D",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 41.354,
                  "marginHorizontal": 75,
                  "marginTop": 41.354,
                  "textAlign": "center",
                }
              }
            >
              description
            </Text>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 1
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 2
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 3
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 8,
            }
          }
        />
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</Modal>
`;

exports[`TrustModal matches snapshot in success state 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#F7F7F7",
        "flex": 1,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            {
              "flexGrow": 1,
              "maxHeight": 333.5,
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingHorizontal": 24,
            }
          }
        >
          <Image
            source=""
            style={
              {
                "height": 108,
                "marginBottom": 36,
                "width": 108,
              }
            }
          />
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 20,
                "fontWeight": "700",
                "marginBottom": 7,
                "textAlign": "center",
              }
            }
          >
            successfullyTrusted
          </Text>
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 14,
                "lineHeight": 20,
                "marginBottom": 28,
                "textAlign": "center",
              }
            }
          >
            Redirecting in 3 seconds…
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#EDF6FB",
              "borderRadius": 20,
              "height": 107,
              "justifyContent": "center",
              "marginBottom": 24,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "marginHorizontal": 15,
              }
            }
          >
            <Image
              source={
                {
                  "uri": "https://example.com/logo.png",
                }
              }
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 8,
                  "height": 40,
                  "marginRight": 12,
                  "resizeMode": "contain",
                  "width": 40,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#111827",
                  "flexShrink": 1,
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
            >
              Test Issuer
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</Modal>
`;

exports[`TrustModal matches snapshot with long issuer name 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#F7F7F7",
        "flex": 1,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            {
              "flexGrow": 1,
              "maxHeight": 333.5,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 20,
              "marginBottom": 27,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Image
              source=""
              style={
                {
                  "height": 93.38000000000001,
                  "marginBottom": 21.344,
                  "marginTop": 106.72,
                  "resizeMode": "contain",
                  "width": 93.38000000000001,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#111827",
                  "fontFamily": "Montserrat_700Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "marginBottom": 16.008,
                }
              }
            >
              title
            </Text>
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 76.038,
                  "marginHorizontal": 82.5,
                  "textAlign": "center",
                }
              }
            >
              subTitle
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#EDF6FB",
                "borderRadius": 20,
                "marginBottom": 16,
                "marginHorizontal": 18,
                "minHeight": 533.6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginHorizontal": 15,
                  },
                  {
                    "marginTop": 49.358,
                  },
                ]
              }
            >
              <Image
                source={
                  {
                    "uri": "https://example.com/logo.png",
                  }
                }
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 8,
                    "height": 40,
                    "marginRight": 12,
                    "resizeMode": "contain",
                    "width": 40,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#111827",
                    "flexShrink": 1,
                    "fontSize": 18,
                    "fontWeight": "600",
                  }
                }
              >
                Very Long Issuer Name That Should Wrap Properly
              </Text>
            </View>
            <Text
              style={
                {
                  "color": "#5D5D5D",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 41.354,
                  "marginHorizontal": 75,
                  "marginTop": 41.354,
                  "textAlign": "center",
                }
              }
            >
              description
            </Text>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 1
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 2
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 3
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 8,
            }
          }
        />
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</Modal>
`;

exports[`TrustModal matches snapshot without logo 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#F7F7F7",
        "flex": 1,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            {
              "flexGrow": 1,
              "maxHeight": 333.5,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 20,
              "marginBottom": 27,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Image
              source=""
              style={
                {
                  "height": 93.38000000000001,
                  "marginBottom": 21.344,
                  "marginTop": 106.72,
                  "resizeMode": "contain",
                  "width": 93.38000000000001,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#111827",
                  "fontFamily": "Montserrat_700Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "marginBottom": 16.008,
                }
              }
            >
              title
            </Text>
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 76.038,
                  "marginHorizontal": 82.5,
                  "textAlign": "center",
                }
              }
            >
              subTitle
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#EDF6FB",
                "borderRadius": 20,
                "marginBottom": 16,
                "marginHorizontal": 18,
                "minHeight": 533.6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginHorizontal": 15,
                  },
                  {
                    "marginTop": 49.358,
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#111827",
                    "flexShrink": 1,
                    "fontSize": 18,
                    "fontWeight": "600",
                  }
                }
              >
                Test Issuer
              </Text>
            </View>
            <Text
              style={
                {
                  "color": "#5D5D5D",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 41.354,
                  "marginHorizontal": 75,
                  "marginTop": 41.354,
                  "textAlign": "center",
                }
              }
            >
              description
            </Text>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 1
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 2
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 3
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 8,
            }
          }
        />
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</Modal>
`;

exports[`TrustModal matches snapshot without logo and name 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#F7F7F7",
        "flex": 1,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            {
              "flexGrow": 1,
              "maxHeight": 333.5,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 20,
              "marginBottom": 27,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Image
              source=""
              style={
                {
                  "height": 93.38000000000001,
                  "marginBottom": 21.344,
                  "marginTop": 106.72,
                  "resizeMode": "contain",
                  "width": 93.38000000000001,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#111827",
                  "fontFamily": "Montserrat_700Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "marginBottom": 16.008,
                }
              }
            >
              title
            </Text>
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 76.038,
                  "marginHorizontal": 82.5,
                  "textAlign": "center",
                }
              }
            >
              subTitle
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#EDF6FB",
                "borderRadius": 20,
                "marginBottom": 16,
                "marginHorizontal": 18,
                "minHeight": 533.6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginHorizontal": 15,
                  },
                  {
                    "marginTop": 49.358,
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#111827",
                    "flexShrink": 1,
                    "fontSize": 18,
                    "fontWeight": "600",
                  }
                }
              />
            </View>
            <Text
              style={
                {
                  "color": "#5D5D5D",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 41.354,
                  "marginHorizontal": 75,
                  "marginTop": 41.354,
                  "textAlign": "center",
                }
              }
            >
              description
            </Text>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 1
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 2
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 3
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 8,
            }
          }
        />
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</Modal>
`;

exports[`TrustModal matches snapshot without name 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      {
        "backgroundColor": "#F7F7F7",
        "flex": 1,
        "paddingBottom": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            {
              "flexGrow": 1,
              "maxHeight": 333.5,
            }
          }
        />
        <View
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 20,
              "marginBottom": 27,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Image
              source=""
              style={
                {
                  "height": 93.38000000000001,
                  "marginBottom": 21.344,
                  "marginTop": 106.72,
                  "resizeMode": "contain",
                  "width": 93.38000000000001,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#111827",
                  "fontFamily": "Montserrat_700Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "marginBottom": 16.008,
                }
              }
            >
              title
            </Text>
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 76.038,
                  "marginHorizontal": 82.5,
                  "textAlign": "center",
                }
              }
            >
              subTitle
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#EDF6FB",
                "borderRadius": 20,
                "marginBottom": 16,
                "marginHorizontal": 18,
                "minHeight": 533.6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginHorizontal": 15,
                  },
                  {
                    "marginTop": 49.358,
                  },
                ]
              }
            >
              <Image
                source={
                  {
                    "uri": "https://example.com/logo.png",
                  }
                }
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 8,
                    "height": 40,
                    "marginRight": 12,
                    "resizeMode": "contain",
                    "width": 40,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#111827",
                    "flexShrink": 1,
                    "fontSize": 18,
                    "fontWeight": "600",
                  }
                }
              />
            </View>
            <Text
              style={
                {
                  "color": "#5D5D5D",
                  "fontFamily": "Montserrat_500Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 41.354,
                  "marginHorizontal": 75,
                  "marginTop": 41.354,
                  "textAlign": "center",
                }
              }
            >
              description
            </Text>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 1
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 2
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "paddingHorizontal": 37.5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 16,
                    "marginRight": 8,
                    "marginTop": 1,
                  }
                }
              >
                •
              </Text>
              <Text
                style={
                  {
                    "color": "#5D5D5D",
                    "flex": 1,
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "textAlign": "left",
                  }
                }
              >
                Point 3
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 8,
            }
          }
        />
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</Modal>
`;
